<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page1"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/main_menu" />
    <item
        android:id="@+id/page2"
        android:enabled="true"
        android:icon="@drawable/credit_card_icon"
        android:title="@string/my_bank_menu" />
    <item
        android:id="@+id/page3"
        android:enabled="true"
        android:icon="@drawable/exchange_icon"
        android:title="@string/exchange_menu" />
    <item
        android:id="@+id/page4"
        android:enabled="true"
        android:icon="@drawable/arrow_icon"
        android:title="@string/payments_menu" />
    <item
        android:id="@+id/page5"
        android:enabled="true"
        android:icon="@drawable/others_icon"
        android:title="@string/others_menu" />
</menu>