<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MyBankActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="140dp"
        android:hint="@string/search_hint"
        app:boxBackgroundColor="@color/background"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="12dp"
        android:background="@android:drawable/ic_search_category_default"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <ImageView
        android:id="@+id/notification"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/notifications_icon"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/account_icon"
        app:layout_constraintStart_toEndOf="@+id/notification"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bonus_cv"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bonus_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bonus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bonus_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/how_many_bonuses"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/bonus_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bonus_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="5000.0"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/bonus_tv"
                app:layout_constraintTop_toBottomOf="@+id/bonus_tv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_currency"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/bonus_sum"
                app:layout_constraintTop_toTopOf="@+id/bonus_sum" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cards_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/cards_title"
        android:textColor="@color/grey"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_cv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1_cv"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cards_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/card1_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/type_of_card"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/card1_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card1_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="20 000"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/card1_tv"
                app:layout_constraintTop_toBottomOf="@+id/card1_tv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_currency"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/card1_sum"
                app:layout_constraintTop_toTopOf="@+id/card1_sum" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/budget_cv"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bonus_cv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/budget_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/tenge_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/budget_title"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/budget_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu" />

    <androidx.cardview.widget.CardView
        android:id="@+id/other_cv"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1_cv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/open_card_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/card_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/credit_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/tenge_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/percent_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/persent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/savings_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/saving"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.925"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/open_card_text"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/open_card_iv"
                app:layout_constraintStart_toStartOf="@+id/open_card_iv"
                app:layout_constraintTop_toBottomOf="@+id/open_card_iv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/credit_text"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/credit_iv"
                app:layout_constraintStart_toStartOf="@+id/credit_iv"
                app:layout_constraintTop_toBottomOf="@+id/credit_iv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/percent_text"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/percent_iv"
                app:layout_constraintStart_toStartOf="@+id/percent_iv"
                app:layout_constraintTop_toBottomOf="@+id/percent_iv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/deposit_text"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/savings_iv"
                app:layout_constraintStart_toStartOf="@+id/savings_iv"
                app:layout_constraintTop_toBottomOf="@+id/savings_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>